<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <modules>
        <module>greetings-bootstrap</module>
        <module>greetings-rest</module>
        <module>greetings-application</module>
        <module>greetings-domain</module>
        <module>greetings-persistence</module>
        <module>greetings-producer</module>
        <module>jacoco-reports</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.5.3</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>net.bakaar</groupId>
    <artifactId>greetings-service</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>greetings-service</name>
    <description>Demo project for BDD testing and Hexagonal architecture</description>
    <packaging>pom</packaging>
    <properties>
        <java.version>16</java.version>
        <cucumber.version>6.10.4</cucumber.version>
        <testcontainer.version>1.15.3</testcontainer.version>
        <pact.version>4.2.7</pact.version>
        <argLine>--enable-preview</argLine>
        <spring-boot.run.jvmArguments>--enable-preview</spring-boot.run.jvmArguments>
        <jacoco.version>0.8.7</jacoco.version>
        <sonar.host.url>http://sonarcloud.io</sonar.host.url>
        <sonar.projectName>greetings-service</sonar.projectName>
        <sonar.projectKey>greetings-service</sonar.projectKey>
        <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
        <sonar.organization>mckratt</sonar.organization>
        <sonar.coverage.exclusions>
            **/*Properties.java,
            **/*Configuration.java,
            **/*Application.java,
            jacoco-report/**
        </sonar.coverage.exclusions>
        <aggregate.report.dir>../jacoco-reports/target/site/jacoco-aggregate/jacoco.xml</aggregate.report.dir>
        <sonar.coverage.jacoco.xmlReportPaths>${basedir}/${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${testcontainer.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit-platform-engine</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.javafaker</groupId>
            <artifactId>javafaker</artifactId>
            <version>1.0.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>${argLine}</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>coverage</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>${jacoco.version}</version>
                        <executions>
                            <execution>
                                <id>prepare-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>prepare-agent-it</id>
                                <goals>
                                    <goal>prepare-agent-integration</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <!--    <repositories>-->
    <!--        <repository>-->
    <!--            <id>spring-milestones</id>-->
    <!--            <name>Spring Milestones</name>-->
    <!--            <url>https://repo.spring.io/milestone</url>-->
    <!--        </repository>-->
    <!--    </repositories>-->
    <!--    <pluginRepositories>-->
    <!--        <pluginRepository>-->
    <!--            <id>spring-milestones</id>-->
    <!--            <name>Spring Milestones</name>-->
    <!--            <url>https://repo.spring.io/milestone</url>-->
    <!--        </pluginRepository>-->
    <!--    </pluginRepositories>-->
</project>
